--- a/src/styles.css
+++ b/src/styles.css
@@ -22,11 +22,10 @@
 } */
 
 /* Hide the virtual keyboard toggle */
-math-field::part(virtual-keyboard-toggle) {
+/* math-field::part(virtual-keyboard-toggle) {
   display: none;
 }
 
-/* Hide the menu toggle */
 math-field::part(menu-toggle) {
   display: none;
-}
+} */
